Made modal 'overflow' fixed sidebar

--- a/frontend/styles/Sidebar.module.scss
+++ b/frontend/styles/Sidebar.module.scss
@@ -60,7 +60,7 @@
         padding: 0;
         border-right: none;
         position: fixed;
-        z-index: 141414141;
+        z-index: 141414;
         bottom: 0;
         left: 0;
     }
